--- a/ApplicationController/public_html/adf.login.html
+++ b/ApplicationController/public_html/adf.login.html
@@ -1,13 +1,17 @@
 <!-- Copyright (c) 2008, 2015, Oracle and/or its affiliates. All rights reserved. -->
-<!DOCTYPE html>
-<html height="100%">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--link rel="stylesheet" type="text/css" href="login.css"-->
-    <title>Default Login Page</title>
-	        <style>
+
+
+
+
+<!DOCTYPE html PUBLIC "" "">
+<html>
+    <head>
+        <meta content="IE=11.0000" http-equiv="X-UA-Compatible"/>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+        <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <title>Default Login Page</title>
+        <style>
             /* Color bars */
             body {
                 position: absolute;
@@ -688,14 +692,14 @@
                                                                                                                      Password</label>
                     </div>
                     <div class="form-row" id="oracle_access_auto_login_label" dir="rtl">
-                        <input name="oracle_access_auto_login_id"
+                        <label for="oracle_access_auto_login_id">Remember Me</label><input name="oracle_access_auto_login_id"
                                                                                            class="message-text"
                                                                                            id="oracle_access_auto_login_id"
                                                                                            type="checkbox"
                                                                                            ontouchcancel="pressed(this,false)"
                                                                                            ontouchend="pressed(this,false)"
                                                                                            ontouchstart="pressed(this,true)"/>
-						<label for="oracle_access_auto_login_id">Remember Me</label>
+						
                     </div>
                 </div>
                 <div class="centerButton">
