--- a/ApplicationController/public_html/adf.login.html
+++ b/ApplicationController/public_html/adf.login.html
@@ -1,6 +1,8 @@
 <!-- Copyright (c) 2008, 2015, Oracle and/or its affiliates. All rights reserved. -->
 
 
+
+
 <!DOCTYPE html>
 <html height="100%">
     <head>
@@ -122,7 +124,7 @@
             }
             /* Icon */
             #bodyPage {
-                background-image: url("Logo.jpg");
+                background-image: url("Logo_withcaption.jpg");
                 background-repeat: no-repeat;
                 background-position: center top;
                 padding-bottom: 5%;
@@ -616,7 +618,7 @@
                                                                                                    onblur="pressed(this,false)"
                                                                                                    type="text"
                                                                                                    placeholder="Username"
-                                                                                                   value=""
+                                                                                                   value="QUALITY_INSPECTOR"
                                                                                                    autocomplete="off"
                                                                                                    autocapitalize="none"
                                                                                                    autocorrect="off"/>
@@ -642,7 +644,7 @@
                                                                                                                               onblur="pressed(this,false)"
                                                                                                                               type="password"
                                                                                                                               placeholder="Password"
-                                                                                                                              value=""/>
+                                                                                                                              value="welcome1"/>
                 </div>
                 <div class="message-text">
                     <div class="form-row" id="oracle_access_remember_username_label" hidden="hidden">
