--- a/ApplicationController/public_html/adf.login.html
+++ b/ApplicationController/public_html/adf.login.html
@@ -3,6 +3,7 @@
 
 
 
+
 <!DOCTYPE html>
 <html height="100%">
     <head>
@@ -618,7 +619,6 @@
                                                                                                    onblur="pressed(this,false)"
                                                                                                    type="text"
                                                                                                    placeholder="Username"
-                                                                                                   value="QUALITY_INSPECTOR"
                                                                                                    autocomplete="off"
                                                                                                    autocapitalize="none"
                                                                                                    autocorrect="off"/>
@@ -643,8 +643,7 @@
                                                                                                                               onfocus="pressed(this,true)"
                                                                                                                               onblur="pressed(this,false)"
                                                                                                                               type="password"
-                                                                                                                              placeholder="Password"
-                                                                                                                              value="welcome1"/>
+                                                                                                                              placeholder="Password"/>
                 </div>
                 <div class="message-text">
                     <div class="form-row" id="oracle_access_remember_username_label" hidden="hidden">
