--- a/ApplicationController/public_html/adf.login.html
+++ b/ApplicationController/public_html/adf.login.html
@@ -4,6 +4,10 @@
 
 
 
+
+
+
+
 <!DOCTYPE html>
 <html height="100%">
     <head>
@@ -621,7 +625,8 @@
                                                                                                    placeholder="Username"
                                                                                                    autocomplete="off"
                                                                                                    autocapitalize="none"
-                                                                                                   autocorrect="off"/>
+                                                                                                   autocorrect="off"
+                                                                                                   />
                 </div>
                 <div class="login-panelFormLayout" id="oracle_access_iddomain_label">
                     <label class="field-label" for="oracle_access_iddomain_id">Domain Name</label><input name="oracle_access_iddomain_id"
@@ -642,7 +647,7 @@
                                                                                                                               id="oracle_access_pwd_id"
                                                                                                                               onfocus="pressed(this,true)"
                                                                                                                               onblur="pressed(this,false)"
-                                                                                                                              type="password"
+                                                                                                                              type="password"                                                                                                                              
                                                                                                                               placeholder="Password"/>
                 </div>
                 <div class="message-text">
